Fixed Outlet bugs and reformatted the enrollment keyboard to a number pad

--- a/Cagan College/Base.lproj/Main.storyboard
+++ b/Cagan College/Base.lproj/Main.storyboard
@@ -102,7 +102,7 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enrollment" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Fl-Nh-NU9">
                                 <rect key="frame" x="200" y="176" width="200" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Website" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8MU-bX-xTk">
                                 <rect key="frame" x="200" y="214" width="200" height="30"/>
