--- a/Cagan College/Base.lproj/Main.storyboard
+++ b/Cagan College/Base.lproj/Main.storyboard
@@ -109,8 +109,21 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F8k-1K-0a5">
+                                <rect key="frame" x="180" y="252" width="240" height="128"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a8f-i3-dfz">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="240" id="USe-c9-j9E"/>
+                                            <constraint firstAttribute="height" constant="128" id="m1A-27-kCH"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="LOk-sF-z8S">
-                                <rect key="frame" x="234" y="68" width="132" height="30"/>
+                                <rect key="frame" x="206" y="72" width="187" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lc0-YI-D6h">
                                         <rect key="frame" x="0.0" y="0.0" width="34" height="30"/>
@@ -126,21 +139,15 @@
                                             <action selector="webButtonTapped:" destination="Ipc-h2-oub" eventType="touchUpInside" id="LRS-Oe-cA9"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s0l-j7-dGG">
+                                        <rect key="frame" x="157" y="0.0" width="30" height="30"/>
+                                        <state key="normal" title="Map"/>
+                                        <connections>
+                                            <segue destination="Ay8-Lx-7wF" kind="show" id="H7U-xx-VpR"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F8k-1K-0a5">
-                                <rect key="frame" x="180" y="252" width="240" height="128"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a8f-i3-dfz">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="240" id="USe-c9-j9E"/>
-                                            <constraint firstAttribute="height" constant="128" id="m1A-27-kCH"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
@@ -174,6 +181,48 @@
                 </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1748" y="399"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="4x4-Vu-2q1">
+            <objects>
+                <viewController id="Ay8-Lx-7wF" customClass="MapViewController" customModule="Cagan_College" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="F36-5Y-Fx0"/>
+                        <viewControllerLayoutGuide type="bottom" id="c51-0c-Sqn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Rrb-fv-qcR">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="idH-Mq-dYz">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </mapView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XDJ-kg-sPc">
+                                <rect key="frame" x="252" y="86" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Ay8-Lx-7wF" id="oDV-bq-YzY"/>
+                                </connections>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="c51-0c-Sqn" firstAttribute="top" secondItem="idH-Mq-dYz" secondAttribute="bottom" id="9aO-vU-PVc"/>
+                            <constraint firstItem="idH-Mq-dYz" firstAttribute="leading" secondItem="Rrb-fv-qcR" secondAttribute="leadingMargin" constant="-20" id="OV7-7x-TKC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="idH-Mq-dYz" secondAttribute="trailing" constant="-20" id="WvP-Yg-cia"/>
+                            <constraint firstItem="idH-Mq-dYz" firstAttribute="top" secondItem="F36-5Y-Fx0" secondAttribute="bottom" id="j54-Qo-BsI"/>
+                            <constraint firstItem="XDJ-kg-sPc" firstAttribute="centerX" secondItem="Rrb-fv-qcR" secondAttribute="centerX" id="w1g-Iz-EUE"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="addressField" destination="XDJ-kg-sPc" id="sTC-4t-DPG"/>
+                        <outlet property="mapView" destination="idH-Mq-dYz" id="bPg-DY-p2T"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pIV-SB-wPG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2402" y="399"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZA7-Sr-hVu">
